test/sema/increment-pointer.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

def f(a: mutable int*) {
    var p = a;
    // CHECK: [[@LINE+1]]:6: error: cannot increment 'mutable int*', should be 'mutable int[?]*'
    p++;
}
